[editor] fix(text justify): stop stretching last line

--- a/packages/editor/statics/styles/rich-content-editor.scss
+++ b/packages/editor/statics/styles/rich-content-editor.scss
@@ -102,7 +102,6 @@
   &>* {
     white-space: pre-line !important;
     text-align: justify !important;
-    text-align-last: justify !important;
   }
 }
 
